fix: spacing of top

--- a/src/scss/components/xlg/_xlg-way.scss
+++ b/src/scss/components/xlg/_xlg-way.scss
@@ -1,5 +1,5 @@
 .xlg-way {
-  margin-top: 300px;
+  margin-top: 340px;
   overflow-x: hidden;
   margin-bottom: 100px;
 
